--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,6 +32,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
+        pip install piptools
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f setup.py]; then pip install -e .; fi
     - name: run the tests
