--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,7 +34,7 @@ jobs:
         pip install pytest
         pip install setuptools
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f setup.py]; then pip install -e .; fi
+        if [ -f setup.py]; then pip install .; fi
     - name: run the tests
       run: pytest -v
 
